Fix squished file input fields for Internet Explorer.
Removing the 'height' declaration fixes this issue for IE.

Fixes #229.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -215,7 +215,6 @@ input[type=button], input[type=reset], input[type=submit] {
   height: auto;
 }
 select, input[type=file] {
-  height: 27px;
   *margin-top: 4px;
   /* For IE7, add top margin to align select with labels */
   line-height: 27px;
